--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="aryabalimages/maharshi.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="aryastyles.css" />
+   
 
 </head>
 
@@ -38,7 +39,8 @@
 
             <div>
                 <div><img src="aryabalimages/location.png" /></div>
-                <div class="top-info"><a href="https://g.co/kgs/ieeXw5U">G.T. Road, Panipat, Haryana 132103</a>
+                <div class="top-info"><a href="aryabalimages/StaticMapService.GetMapImage">G.T. Road, Panipat, Haryana
+                        132103</a>
                 </div>
             </div>
             <div>
@@ -248,7 +250,10 @@
         </section>
 
         <section class="principaldesk">
-            <div><img src="aryabalimages/photo10.jpg"></div>
+            <div class="principalimage"><img src="aryabalimages/photo10.jpg">
+                <h2>Dr. Ashok Arya</h2>
+                <p>Principal</p>
+            </div>
             <div>
                 <h1><span class="darkslategray">From the </span><span class="greentext">Principal's Desk</span></h1>
                 <p>When students graduate from school, their entry into the world should be so smooth that nary a ripple
@@ -258,8 +263,11 @@
                     that they can face challenges with aplomb and accept success with humility. We want them to
                     experience the real joy of living not just obtain a vicarious knowledge of it through books. We want
                     them to be known as honourable players and not just winners, as wise and not just intelligent, as
-                    understanding and not just knowledgeable, as kind and compassionate and not just friendly. When
-                    students graduate from school, their entry into the world should be so smooth that nary a ripple
+                    understanding and not just knowledgeable, as kind and compassionate and not just friendly.</p>
+                
+                    <button class="principalmorebtn">Read More &rarr;</button>
+
+                    <div class="principalmore"><p>When students graduate from school, their entry into the world should be so smooth that nary a ripple
                     should mar the transition from adolescence to adulthood; it should be so impactful that it touches
                     the lives of multitudes; and it should be so unique that it remains etched in the minds of those who
                     revelled in it. This is the dream that we at ABBPS have for our students. We want to prepare them so
@@ -268,9 +276,8 @@
                     them to be known as honourable players and not just winners, as wise and not just intelligent, as
                     understanding and not just knowledgeable, as kind and compassionate and not just friendly. Life at
                     ABBPS is an exciting journey which begins when children enter its portals and step into the
-                    intricate domain of the scholar.</p>
-                <h2>Dr. Ashok Arya</h2>
-                <p>Principal</p>
+                    intricate domain of the scholar.</p> 
+                </div>
             </div>
         </section>
 
