--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="aryabalimages/maharshi.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="aryastyles.css" />
-   
+    <link rel="stylesheet" href="responsiveness.css" />
 
 </head>
 
@@ -151,7 +151,7 @@
                 faculty. The values, which are ingrained help to promote confidence, direction, and critical thinking
                 skills, leading to the development of well-adjusted, adaptable and integrated personalities. In other
                 words, ARYA BAL BHARTI PUBLIC SCHOOL offers comprehensive and holistic education.</P>
-            <div>
+            <div class="cultureimage">
                 <div><img src="aryabalimages/photo6.jpg" /></div>
                 <div><img src="aryabalimages/photo7.jpg" /></div>
             </div>
